[package]
name = "mostro-core"
version = "0.6.27"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Mostro Core library"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.38"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "js",
] }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
], optional = true }
sqlx-crud = { version = "0.4.0", features = [
  "runtime-tokio-rustls",
], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
nostr-sdk = "0.38.0"
bitcoin = "0.32.5"
bitcoin_hashes = "0.16.0"
rand = "0.8.5"

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]
sqlx = ["dep:wasm-bindgen", "dep:sqlx", "dep:sqlx-crud"]
