[package]
name = "mostro-core"
version = "0.6.44"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Mostro Core library"
homepage = "https://mostro.network"
repository = "https://github.com/MostroP2P/mostro-core"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.release]
# (Default: true) Set to false to prevent automatically running `cargo publish`.
publish = true
# (Default: true) Set to false to prevent automatically pushing commits and tags to the Git remote.
push = true
# (Default: true) Run `cargo test` before release? Highly recommended.
verify = true
# (Default: true) Create a Git tag for the release (e.g., v0.2.1)? You usually want this.
tag = true
# (Default: false) Sign the release commit with GPG?
sign-commit = true
# (Default: false) Sign the release tag with GPG?
sign-tag = true
# Use 'allow-branch' if you release from other branches. Check defaults if needed.
allow-branch = ["main"]
# Git cliff to generate the changelog
pre-release-hook = [
  "sh", "-c", "git cliff --unreleased --github-repo MostroP2P/mostro-core -o CHANGELOG.md --tag {{version}} && if [ \"$DRY_RUN\" != \"true\" ]; then git diff --quiet CHANGELOG.md || git add CHANGELOG.md && git commit -m \"Update CHANGELOG for version {{version}}\"; else echo \"DRY RUN: Skip git add and commit\"; fi"
]
[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "js",
] }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
], optional = true }
sqlx-crud = { version = "0.4.0", features = [
  "runtime-tokio-rustls",
], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
nostr-sdk = "0.41.0"
bitcoin = "0.32.5"
bitcoin_hashes = "0.16.0"
rand = "0.9.1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22.1"
secrecy = "0.10.3"
zeroize = "1.8.1"
blake3 = "1.8.2"

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]
sqlx = ["dep:wasm-bindgen", "dep:sqlx", "dep:sqlx-crud"]
